tests/errors/extraneous_function_decl.ceos
fn foo<t>(n: t) -> t { n }(1){  }
